added a new directory to store optional medias for the repo. also update index.html to display examples of image from three source, absolute, relative local, and relative global

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -6,6 +6,19 @@
     <title>BOOM</title>
 </head>
 <body>
+    
+    <!--ABSOLUTE IMAGE SOURCE, ALTERNATE DESC. FOR THE LOGO AND DIMENSION 360 X 360-->
+
+    <img src="https://www.theodinproject.com/mstile-310x310.png" alt="TOP's logo" width="360" height="360">
+
+    <!-- RELATIVE LOCAL IMAGE SOURCE, ALTERNATE DESC. FOR THE LOGO AND DIMENSION 360 X 360-->
+
+    <img src="./jamiroquai.jpg" alt="TOP's logo" width="360" height="360">
+
+    <!-- RELATIVE GLOBAL IMAGE SOURCE, ALTERNATE DESC. FOR THE LOGO AND DIMENSION 360 X 360-->
+
+    <img src="../custom-images-unrelated-to-odin/mck.jpeg" alt="TOP's logo" width="360" height="360">
+
     <h1>Homepage</h1>
 
     <!-- ABSOLUTE LINK, ALWAYS POINTS TO THE DOMAIN ABOVE-->
